#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSQt
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-11
2015-02-27 Mikhail S. Dubrovin
- add DragStore, WdgImageFigs, DragBase, DragCenter, DragCircle - layer of draggable figures (PSAS-11, PSAS34)

Tag: V00-00-10
2015-02-20 Mikhail S. Dubrovin
- Add to svn directories and files under PSQt/data

Tag: V00-00-09
2015-02-20 Mikhail S. Dubrovin
- Multiple changes in many classes (PSAS34);
	- evaluate zoom relative to full size image,
	- apply color table in stead of direct intensity to color conversion
	- add icones for buttons
	- load test files and icons from the PSQt/data directory
	- implement saving of the corrected geometry file with auto-generated name
	- add new methods in QGUtils

Tag: V00-00-08
2015-02-17 Mikhail S. Dubrovin
- QGUtils.cpp - include <cstring> for memcpy to comply with RHEL6

Tag: V00-00-07
2015-02-17 Mikhail S. Dubrovin
- The 1st working version of the app with control gui and image (PSAS-11, PSAS34)

Tag: V00-00-06
2015-02-11 Mikhail S. Dubrovin
- Fix minor problems for RHEL6 nightly broken
- Adjust logging system using GUILogger, Logger, and LoggerBase for all classes of this project.

Tag: V00-00-05
2015-02-10 Mikhail S. Dubrovin
- Add more modules for sensor alignment project

Tag: V00-00-04
2015-09-22 Mikhail S. Dubrovin

Tag: V00-00-03
2014-09-17 Mikhail S. Dubrovin
A       app/geo.cpp
A       include/GUIMain.h
A       include/ThreadTimer.h
A       include/GeoImage.h
A       include/WdgFile.h
A       include/WdgImage.h
A       include/QGUtils.h
A       src/ThreadTimer.cpp
A       src/GeoImage.cpp
A       src/WdgFile.cpp
A       src/WdgImage.cpp
A       src/QGUtils.cpp
A       src/GUIMain.cpp

Tag: V00-00-02