@@ -11,9 +11,13 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-12
+2015-03-02 Mikhail S. Dubrovin
+- add WdgPointPos, use it in GUIImageViewer, improve vizualization of drag-able figures (PSAS-11)
+
 Tag: V00-00-11
 2015-02-27 Mikhail S. Dubrovin
-- add DragStore, WdgImageFigs, DragBase, DragCenter, DragCircle - layer of draggable figures (PSAS-11, PSAS34)
+- add DragStore, WdgImageFigs, DragBase, DragCenter, DragCircle - layer of drag-able figures (PSAS-11, PSAS-34)
 
 Tag: V00-00-10
 2015-02-20 Mikhail S. Dubrovin
